書き直した

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
             <h1>ゆれるhalka</h1>
             <p>Goryokaku Park, Hakodate City, Hokkaido, JAPAN</p>
         <div>
-            <span id="date-string"></span>
-            <span id="current-time"></span>
+            <span id="currentDateTime"></span>
         </div>
     </header>
     <section id="controls">
