--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>ゆれるhalka</title>
+    <title>ゆれる</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header>
-            <h1>ゆれるhalka</h1>
+            <h1>ゆれる</h1>
             <p>Goryokaku Park, Hakodate City, Hokkaido, JAPAN</p>
         <div>
             <span id="currentDateTime"></span>
@@ -40,9 +40,9 @@
             <thead>
                 <tr>
                     <th>日時</th>
-                    <th>加速度X</th>
-                    <th>加速度Y</th>
-                    <th>加速度Z</th>
+                    <th>X</th>
+                    <th>Y</th>
+                    <th>Z</th>
                     <th>加速度合成</th>
                     <th>加速度合成（計算値）</th>
                 </tr>
@@ -76,7 +76,8 @@
         <p>© 2025 halka</p>
         <p><a href="https://github.com/halka/gal">Source Code on GitHub</a></p>
         <p>Powered by <a href="https://quake.one/sense/">QUAKE.ONE</a> Developed by Prioris.</p>
-        <p>加速度は100Hz, 震度は1Hzで出力。ハードウェアとネットワークの都合上、700msくらい遅れていると思われます。</p>
+        <p>加速度は100Hz, 震度は1Hzで出力されています。</p>
+        <p>ハードウェアとネットワークの都合上、700msくらい遅れていると思われます。</p>
     </footer>
 
     <script src="scripts.js"></script>
